--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "01",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://engineeringthesis.herokuapp.com/",
   "dependencies": {
     "@karlshea/react-dropzone-uploader": "^2.12.0",
     "@material-ui/core": "^4.11.3",
@@ -74,6 +75,5 @@
       "eslint --fix",
       "git add"
     ]
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
